--- a/src/Components/MyButton/MyButton.module.scss
+++ b/src/Components/MyButton/MyButton.module.scss
@@ -1,4 +1,5 @@
 .myBtn{
+  z-index: 12;
   position: relative;
   display: inline-block;
   background-color: transparent;
@@ -13,6 +14,7 @@
   letter-spacing: 4px;
   cursor: pointer;
   margin: 0 0 0 10px;
+  width: 20vh;
   &:hover{
     background: #258dc8;
     color: white;
@@ -23,13 +25,20 @@
     0 0 50px #258dc8,
     0 0 100px #258dc8;
   }
-  span{
+  .span{
     position: absolute;
     display: block;
   }
 }
 .p{
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   z-index: 10;
+  > p{
+    margin: 0 5px;
+  }
 }
 .myBtn span:nth-child(1) {
   top: 0;
@@ -39,7 +48,10 @@
   background: linear-gradient(90deg, transparent, #258dc8);
   animation: btn-anim1 1s linear infinite;
 }
-
+.icon{
+  margin-left: 110px;
+  height: 16px;
+}
 @keyframes btn-anim1 {
   0% {
     left: -100%;
@@ -103,5 +115,16 @@
   }
   50%,100% {
     bottom: 100%;
+  }
+}
+.DoneButton{
+  position: relative;
+  display: inline-block;
+  background-color: transparent;
+  border: 0;
+  margin: 0 10px;
+  font-size: 30px;
+  &:hover{
+    color: white;
   }
 }
